--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -46,6 +46,6 @@ if (pushType == 'fcm') {
     tasks.copyGoogleServices.finalizedBy()
     apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
 } else if (pushType == 'fcm-without-build-plugin') {
-    tasks.copyGoogleServices.execute()
+    tasks.copyGoogleServices.finalizedBy()
     logger.info("Not applying GoogleServicesPlugin from Intercom plugin, another plugin should do this")
 }
