--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -16,7 +16,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.+'
         if (pushType == 'fcm') {
-            classpath 'com.google.gms:google-services:3.2.0'
+           // classpath 'com.google.gms:google-services:3.2.0'
         }
     }
 }
@@ -35,7 +35,7 @@ dependencies {
     }
 }
 
-def googleServicesJsonPath = '../../../google-services.json'
+def googleServicesJsonPath = '../../../../google-services.json'
 
 task copyGoogleServices(type: Copy) {
     from googleServicesJsonPath
