--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -16,7 +16,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.+'
         if (pushType == 'fcm') {
-            classpath 'com.google.gms:google-services:4.3.8'
+            classpath 'com.google.gms:google-services:3.2.0'
         }
     }
 }
@@ -47,5 +47,5 @@ if (pushType == 'fcm') {
     apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
 } else if (pushType == 'fcm-without-build-plugin') {
     tasks.copyGoogleServices.execute()
-    logger.info('Not applying GoogleServicesPlugin from Intercom plugin, another plugin should do this')
+    logger.info("Not applying GoogleServicesPlugin from Intercom plugin, another plugin should do this")
 }
