--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -14,9 +14,9 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.+'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         if (pushType == 'fcm') {
-            classpath 'com.google.gms:google-services:3.2.0'
+            classpath 'com.google.gms:google-services:4.3.3'
         }
     }
 }
@@ -28,24 +28,26 @@ repositories {
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:5.4.1'
-    compile 'io.intercom.android:intercom-sdk-fcm:5.4.1'
+    implementation 'io.intercom.android:intercom-sdk-base:10.0.1'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
-        compile 'com.google.firebase:firebase-messaging:17.+'
+        implementation 'com.google.firebase:firebase-messaging:20.+'
+        implementation 'io.intercom.android:intercom-sdk-fcm:10.0.1'
     }
 }
 
-def googleServicesJsonPath = '../../../../google-services.json'
+def googleServicesJsonPath = '../../../google-services.json'
 
 task copyGoogleServices(type: Copy) {
     from googleServicesJsonPath
     into '.'
 }
 
+gradle.taskGraph.whenReady {
+    copyGoogleServices
+}
+
 if (pushType == 'fcm') {
-    tasks.copyGoogleServices.finalizedBy()
     apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
 } else if (pushType == 'fcm-without-build-plugin') {
-    tasks.copyGoogleServices.execute()
     logger.info("Not applying GoogleServicesPlugin from Intercom plugin, another plugin should do this")
 }
